[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/ArchitectsDaughter.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://GodetteVN/Core/mainMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 1
outline_color = Color( 0.529412, 0.305882, 0.305882, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[node name="mainMenuScreen" type="CanvasLayer"]
layer = 10
script = ExtResource( 2 )

[node name="backgroundPic" type="TextureRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="backgroundColor" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.36743
margin_right = 3.36743
rect_min_size = Vector2( 1920, 1080 )
color = Color( 1, 1, 1, 0.878431 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="currentPage" type="Label" parent="."]
margin_left = 12.0
margin_top = 38.0
margin_right = 226.0
margin_bottom = 228.0
custom_colors/font_color = Color( 0.188235, 0.0901961, 0.454902, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="verticalBar" type="ColorRect" parent="."]
margin_left = 250.0
margin_right = 260.0
margin_bottom = 1080.0
color = Color( 0.4, 0.380392, 0.380392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="content" type="Control" parent="."]
margin_left = 290.0
margin_top = 120.0
margin_right = 1890.0
margin_bottom = 1020.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="buttons" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 293.0
margin_right = 256.0
margin_bottom = 700.0
rect_min_size = Vector2( 0, 400 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mainButton" type="Button" parent="buttons"]
margin_right = 252.0
margin_bottom = 63.0
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.415686, 0.407843, 0.407843, 1 )
custom_fonts/font = SubResource( 2 )
text = "Main"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="saveButton" type="Button" parent="buttons"]
margin_top = 67.0
margin_right = 252.0
margin_bottom = 130.0
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.415686, 0.407843, 0.407843, 1 )
custom_fonts/font = SubResource( 2 )
text = "Save"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="loadButton" type="Button" parent="buttons"]
margin_top = 134.0
margin_right = 252.0
margin_bottom = 197.0
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.415686, 0.407843, 0.407843, 1 )
custom_fonts/font = SubResource( 2 )
text = "Load"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settingButton" type="Button" parent="buttons"]
margin_top = 201.0
margin_right = 252.0
margin_bottom = 264.0
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.415686, 0.407843, 0.407843, 1 )
custom_fonts/font = SubResource( 2 )
text = "Settings"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="histButton" type="Button" parent="buttons"]
margin_top = 268.0
margin_right = 252.0
margin_bottom = 331.0
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.415686, 0.407843, 0.407843, 1 )
custom_fonts/font = SubResource( 2 )
text = "History"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quitButton" type="Button" parent="buttons"]
margin_top = 335.0
margin_right = 252.0
margin_bottom = 398.0
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.415686, 0.407843, 0.407843, 1 )
custom_fonts/font = SubResource( 2 )
text = "Quit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="returnButton" type="Button" parent="."]
margin_left = -2.0
margin_top = 958.0
margin_right = 257.0
margin_bottom = 1021.0
focus_mode = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Return"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="buttons/mainButton" to="." method="_on_mainButton_pressed"]
[connection signal="mouse_entered" from="buttons/saveButton" to="." method="_on_saveButton_mouse_entered"]
[connection signal="mouse_entered" from="buttons/loadButton" to="." method="_on_loadButton_mouse_entered"]
[connection signal="mouse_entered" from="buttons/settingButton" to="." method="_on_settingButton_mouse_entered"]
[connection signal="mouse_entered" from="buttons/histButton" to="." method="_on_histButton_mouse_entered"]
[connection signal="pressed" from="buttons/quitButton" to="." method="_on_quitButton_pressed"]
[connection signal="pressed" from="returnButton" to="." method="_on_returnButton_pressed"]
